--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 18px;
   line-height: 1.3;
-  color: #fff;
+  color: #111;
 }
 
 a:link {
